--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 								<li class="sub_txt">USED STACK : HTML5, CSS3, javascript, jQuery</li>
 							    <li>두번째로 만들어 본 홈페이지는 국민은행 반응형 페이지입니다. <br/> 반응형 웹은 디바이스 크기에 따라 레이아웃이 유동적으로 변동 되어야하기 때문에 <br/>무너지는 레이아웃을 수정하는 과정을 반복했던 작업이었습니다. <br/> PC버전, 태블릿버전, 모바일 버전의 반응형 페이지를 제작하였습니다. <br/>국민은행에 대한 정보를 효과적이고 깔끔하게 전달하려 하였습니다.</li>
 							</ul>
-							<a href="https://iamseohui.github.io/paldal/">VIEW SITE</a>
+							<a href="https://iamseohui.github.io/kb_bank/">VIEW SITE</a>
 						</div>
 					</div>
 					<div class="swiper-slide slide3">
