--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
 	</ul>
 	<header class="header">
 		<nav class="fixed">
-			<h1 class="logo"><a href="#"><img src="./img/logo.png" alt="logo"/></a></h1>
+			<h1 class="logo"><a href="#firstPage"><img src="./img/logo.png" alt="logo"/></a></h1>
 			<ul class="main-menu">
+				<li><a href="#firstPage">Home</a></li>
 				<li><a href="#secondPage">About</a></li>
 				<li><a href="#thirdPage">Skills</a></li>
 				<li><a href="#forthPage">Portfolio</a></li>
@@ -176,7 +177,7 @@
 								<li>웹사이트의 레이아웃과 다양한 컨텐츠 디자인을 이해하고 적용하기 위해 <br/>사이트의 목적을 분명히 나타낼 수 있는 사이트를 찾아 정하였습니다. <br/> 팔달구청이 가지고 있는 관공서의 특징을 살리면서도<br/> 한달동안 배운 css와 jQuery를 잘 활용해보기 위해 노력하며 제작했습니다. <br/> HTML과 CSS를 처음 배우고 빈 문서부터 시작하여 직접 코딩해본 첫 웹페이지라서<br/> 다른 프로젝트 보다고 시간이 많이 소요되었던 홈페이지 입니다. <br/> 그만큼 힘들었지만 완성했을때 가장 뿌듯했던 프로젝트 였습니다.</li>
 							</ul>
 							<span>*메인페이지 1개, 서브페이지 5개(종합안내, 열린구청, 행정복지센터, 팔달구소개, 찾아오시는 길)로 구성되어 있습니다.</span>
-							<a href="https://iamseohui.github.io/paldal/" title="paldal link" target="_blank">VIEW SITE</a>
+							<a href="https://iamseohui.github.io/paldal/">VIEW SITE</a>
 						</div>
 					</div>
 					<div class="swiper-slide slide2">
@@ -192,7 +193,7 @@
 								<li class="sub_txt">USED STACK : HTML5, CSS3, javascript, jQuery</li>
 							    <li>두번째로 만들어 본 홈페이지는 국민은행 반응형 페이지입니다. <br/> 반응형 웹은 디바이스 크기에 따라 레이아웃이 유동적으로 변동 되어야하기 때문에 <br/>무너지는 레이아웃을 수정하는 과정을 반복했던 작업이었습니다. <br/> PC버전, 태블릿버전, 모바일 버전의 반응형 페이지를 제작하였습니다. <br/>국민은행에 대한 정보를 효과적이고 깔끔하게 전달하려 하였습니다.</li>
 							</ul>
-							<a href="https://iamseohui.github.io/kb_bank/" title="kb link" target="_blank">VIEW SITE</a>
+							<a href="https://iamseohui.github.io/paldal/">VIEW SITE</a>
 						</div>
 					</div>
 					<div class="swiper-slide slide3">
@@ -208,7 +209,7 @@
 								<li class="sub_txt">USED STACK : HTML5, CSS3, SASS, javascript, jQuery</li>
 								<li>세번째로 만들어 본 홈페이지는 AK PLAZA 입니다. <br/> sass를 이용하여 제작하였습니다. 처음에는 익숙하지 않아 어려웠지만 <br/> 사용해보니 코드의 가독성을 높혀주고 유지보수 하기에 <br/>편리한 문법이라는 생각이 들었습니다. <br/> 새로운 문법을 공부해 볼 수 있는 기회였습니다. <br/> 복잡하지 않고 깔끔하게 AK PLAZA의 느낌을 전달하고 <br/>가독성을 높히기 위해 효과적으로 레이아웃을 구성하였습니다.</li>
 							</ul>
-							<a href="https://iamseohui.github.io/ak/" title="ak link" target="_blank">VIEW SITE</a>
+							<a href="https://iamseohui.github.io/ak/">VIEW SITE</a>
 						</div>
 					</div>
 				</div>
