updated github address
updated github address

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 					<p><i class="fas fa-mobile-alt"></i> +82 10 8474 8596</p>
 					<p><i class="fas fa-map-marker-alt"></i> Suwon-si, Gyeonggi-do, Republic of Korea</p>
 					<p><a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&to=90cammie@gmail.com" title="email address" target="_blank"><i class="far fa-envelope"></i> 90cammie@gmail.com</a></p>
-					<p><a href="https://github.com/iamcammie" title="github address" target="_blank"><i class="fab fa-github"></i> https://github.com/iamcammie</a></p>
+					<p><a href="https://github.com/iamseohui" title="github address" target="_blank"><i class="fab fa-github"></i> https://github.com/iamseohui</a></p>
 					
 				</div>
 				<div id="map"></div>
